split contact search and list (to fix overflow)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ main.container
 
 .contacts_list
 {
-    height: 100%;
+    height: 39rem;
     overflow-y: auto;
 }
 
